--- a/fly.toml
+++ b/fly.toml
@@ -14,7 +14,7 @@ processes = []
 
 [[services]]
   http_checks = []
-  internal_port = 8043
+  internal_port = 80
   processes = ["app"]
   protocol = "tcp"
   script_checks = []
@@ -24,6 +24,7 @@ processes = []
     type = "connections"
 
   [[services.ports]]
+    force_https = true
     handlers = ["http"]
     port = 80
 
