use 308 for POST redirect

--- a/Caddyfile
+++ b/Caddyfile
@@ -2,15 +2,27 @@
   auto_https off
 }
 
-http://bw.sourmash.bio/ {
+http://bw.sourmash.bio {
   redir https://branchwater.jgi.doe.gov{uri} permanent
 }
 
-http://api.branchwater.sourmash.bio/ {
-  redir https://branchwater-api.jgi.doe.gov{uri} permanent
+http://branchwater.sourmash.bio {
+  redir https://branchwater.jgi.doe.gov{uri} permanent
 }
 
-http://sourmash.bio/ {
+http://minke.sourmash.bio {
+  redir https://branchwater.jgi.doe.gov{uri} permanent
+}
+
+http://api.branchwater.sourmash.bio {
+  redir https://branchwater-api.jgi.doe.gov{uri} 308
+}
+
+http://mastiff.sourmash.bio {
+  redir https://branchwater-api.jgi.doe.gov{uri} 308
+}
+
+http://sourmash.bio {
   redir https://sourmash.readthedocs.org{uri} permanent
 }
 
